...
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="g2r-Dy-LO7">
                                        <rect key="frame" x="0.0" y="178.5" width="343" height="178"/>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Fu-Zu-VbZ">
                                        <rect key="frame" x="101.5" y="356.5" width="140" height="178.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Let's get started"/>
                                        <connections>
                                            <action selector="requestHealthPermissions:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dO6-Hx-4Pf"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
            </objects>
            <point key="canvasLocation" x="-58.399999999999999" y="93.103448275862078"/>
        </scene>
        <!--Basic Info-->
        <scene sceneID="mlQ-Na-xaB">
            <objects>
                <viewController title="Basic Info" id="C18-Di-RpP" customClass="BasicInfoViewController" customModule="HackYourHealth" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="kCV-xY-R9t"/>
                        <viewControllerLayoutGuide type="bottom" id="11A-ef-AuX"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ed0-KH-bki">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDK-6R-ke8">
                                <rect key="frame" x="156.5" y="326.5" width="62" height="30"/>
                                <state key="normal" title="Continue"/>
                                <connections>
                                    <segue destination="hVK-CF-boq" kind="show" identifier="showExtraInfoViewController" id="fC5-OD-cAa"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="6nY-eV-T4z">
                                <rect key="frame" x="16" y="166" width="343" height="144"/>
...
            </objects>
            <point key="canvasLocation" x="790" y="93"/>
        </scene>
        <!--Extra Info-->
        <scene sceneID="BJC-qh-xr3">
            <objects>
                <viewController title="Extra Info" id="hVK-CF-boq" customClass="ExtraInfoViewController" customModule="HackYourHealth" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="BXL-0Y-vC8"/>
                        <viewControllerLayoutGuide type="bottom" id="D9X-7w-KN0"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="1lm-9r-2ot">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="COl-7p-ueE">
                                <rect key="frame" x="148" y="326.5" width="79" height="30"/>
                                <state key="normal" title="Get Results"/>
                                <connections>
                                    <segue destination="lWL-ub-4Ug" kind="show" identifier="ShowResult" id="hKP-t1-rcY"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jxG-1o-EHh">
                                <rect key="frame" x="16" y="176" width="343" height="142"/>
...
                                            </label>
                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="vcl-99-jRC">
                                                <rect key="frame" x="0.0" y="34" width="343" height="29"/>
                                                <segments>
                                                    <segment title="0"/>
                                                    <segment title="1-3"/>
                                                    <segment title="3-5"/>
                                                    <segment title="6-7"/>
                                                    <segment title="8+"/>
                                                </segments>
                                            </segmentedControl>
                                        </subviews>
                                    </stackView>
...
